# mora-lang

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_CODE_MODIFICATION.md  AGENTS_PRIMITIVES.md  AGENTS_PRIMITIVES_v2.md  AGENTS_SESSION_V0_34.md  AGENTS_SESSION_V0_41.md  ARCHITECTURE_BUG_DETECTION_REPORT_2026-07-10.md  ARCHITECTURE_BUG_DETECTION_REPORT_2026-07-11.md  AUDIT_ARCHITECTURE_REPORT.md  AUDIT_REPORT_V0_53.md  AUDIT_ZEROTRUST_V0_34.md  CHANGELOG.md  CLAUDE.md  CONCURRENCY_AUDIT_REPORT.md  Cargo.toml  Dockerfile  LICENSE  README.md  RESEARCH_PRIMITIVES_6NEW_PROJECTS.md  RESEARCH_PRIMITIVES_MASTER.md  RESEARCH_PRIMITIVES_MASTER_v2.md  agents-cli_analysis.md  build.rs  chatdev-analysis-report.md  docker-compose.yml  langchain_analysis_report.md  langgraph4j_analysis_report.md  report_dive-into-langgraph.md  research-langgraph.md
.github/workflows/: ci.yml  release.yml  reusable-rust-ci.yml
docs/: influences.md  install-ocr.md  learning-plan.md  mora-spec.md  v0.07-implementation-workflow.md  v0.07-v0.08-implementation-workflow.md  v0.08-trait-system-workflow.md  v0.08.5-implementation-workflow.md  v0.09-design.md  v0.09-impl-spec.md  v0.09-test-dispatch-spec.md  v0.10-implementation-workflow.md  v0.11-implementation-workflow.md  workflow-v0.20.md
docs/superpowers/plans/: 2026-06-23-subproject-a-interpreter-architecture.md
docs/superpowers/specs/: 2026-06-23-subproject-a-interpreter-architecture-design.md  api-baseline.txt
editors/: README.md
editors/emacs/: mora-mode.el
editors/helix/: README.md  languages.toml
editors/neovim/: README.md
editors/neovim/lua/: mora-lsp.lua
editors/sublime/: mora.sublime-settings
editors/vim/ftplugin/: mora.vim
editors/vscode/: README.md  mora-language-configuration.json  package.json  tsconfig.json
editors/vscode/syntaxes/: mora.tmLanguage.json
examples/: agent_demo.mora  ai_workflow.mora  bench_server.mora  budget_demo.mora  clock.mora  closures.mora  compact_demo.mora  compress_demo.mora  compress_smart_demo.mora  container.mora  container_demo.mora  critic_demo.mora  embed_demo.mora  file_io.mora  fs_smoke.mora  generic_with_where.mora  hello.mora  hello_v10.mora  hello_v2.mora  hello_v3.mora  hello_v5.mora  hello_v6.mora  hello_v7.mora  http_server_demo.mora  integration_v0_34.mora  lsp_smoke.rs  lsp_v04_smoke.py  main_v4.mora  mcp_server_demo.mora  memory_demo.mora  modules.mora  nested_generic.mora  observe_demo.mora  observe_route_server_demo.mora  office_ocr_demo.mora  route_demo.mora  serve_as_http_demo.mora  serve_as_mcp_demo.mora  serve_with_route_demo.mora  skill_demo.mora  (+6 more)
examples/_legacy/: README.md  bench_server.mora  document_parse_demo.mora  eval_demo.mora  http_server_demo.mora  memory_demo.mora  orchestrate_demo.mora  prompt_section_demo.mora
examples/lib/: tools.mora
src/: actor.rs  ai_infra.rs  ast.rs  ast_adapter.rs  ast_v2.rs  ast_v2_to_v1.rs  common.rs  flow.rs  http_server.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  mcp_server.rs  parser.rs  parser_v2.rs  pressure.rs  record.rs  stress_tests.rs  trace_collector.rs  typeck.rs  typed_ast.rs  value.rs
src/audit/: mod.rs
src/ccr/: mod.rs
src/checkpoint/: memory.rs  mod.rs  sqlite.rs
src/compress/: code.rs  html.rs  json.rs  log.rs  mod.rs  text.rs
src/document/: mod.rs
src/document/backend/: docx.rs  html.rs  image.rs  markdown.rs  mod.rs  pdf.rs  pptx.rs
src/document/reading_order/: mod.rs
src/event/: mod.rs
src/heartbeat/: mod.rs
src/interpreter/: ai_chat.rs  ai_helpers.rs  builtins.rs  dispatch.rs  evaluate.rs  execute.rs  mod.rs  orchestrate.rs  orchestrate_v2.rs  trait_dispatch.rs
src/lsp/: json.rs  mod.rs  providers.rs  server.rs  transport.rs
src/lsp/providers/: completion.rs  definition.rs  folding.rs  formatting.rs  helpers.rs  hover.rs  mod.rs  references.rs  rename.rs  semantic.rs  symbols.rs
src/mir/: interp.rs  lower.rs  mod.rs
src/mock/: mod.rs
src/orchestrate_dag/: mod.rs
src/parser_v2/: expressions.rs  mod.rs  statements.rs
src/plan/: mod.rs
src/record/: analysis.rs  audit.rs  diff.rs  mod.rs  serialization.rs  snapshot.rs  tests.rs
src/refine/: mod.rs
src/runtime/: ai.rs  core.rs  infra.rs  mod.rs  orch.rs  persist.rs  registry.rs  sandbox.rs
src/sandbox/: capability.rs  container.rs  mod.rs
src/schedule/: mod.rs
src/skill/: mod.rs
src/toolplane/: mod.rs
src/typeck/: check.rs  mod.rs  pregel_check.rs
test_data/: typeck_errors.mora  v0.07_validation.mora  verify_typeck_errors.sh
tests/: mir_differential.rs  orchestrate_v50_integration.rs  parser_v2_integration.rs
tests/fixtures/: build_sample_pptx.py  sample.docx  sample.html  sample.md  sample.pptx
