[package]
name = "mora"
version = "0.0.20"
# v0.x 升级 ureq 3.3.0 → edition 2024 (ureq 3.3.0 要求 edition 2024 + MSRV 1.85)
edition = "2024"
authors = ["Mora contributors"]
description = "An AI-native scripting language with streaming, tool calling, memory, routing, agent orchestration, and token budgeting"
license = "BSD-3-Clause"
keywords = ["scripting", "ai", "workflow", "lua-style", "ai-native"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "mora"
path = "src/lib.rs"

[[bin]]
name = "mora"
path = "src/main.rs"

[[bin]]
name = "mora-lsp"
path = "src/bin/lsp.rs"

# v0.04: 删除 mora-mcp 和 mora-serve 二进制
# 单二进制 mora 根据脚本内 `serve as mcp/http` 块自动选择协议

[dependencies]
# v10 首次外部依赖：ureq 同步 HTTP 客户端
# 选择 ureq 而非 reqwest 的理由：ureq 同步阻塞，与同步解释器天然契合
# 不引入 tokio 等 async runtime
# 注意：v9 零依赖承诺被打破，但守住"不引入 async runtime"的红线
# v0.x 升级 ureq 2.12 → 3.3
# 重大变化:
#   - AgentBuilder 重写,超时改用 ConfigBuilder.timeout_global
#   - Error 枚举:Status(u16, Response) → StatusCode(u16) + 多种细粒度变体 (#[non_exhaustive])
#   - Response::into_string() 移除,改用 .body_mut().read_to_string()
#   - 升级到 edition 2024 + MSRV 1.85
ureq = "3.3"
# v0.11: libc 用于设置 SO_REUSEADDR（避免 TIME_WAIT 端口占用）
# 选择 libc 而非 socket2 的理由：libc 是 Rust 几乎必备的 stdlib-like 包，
# 体积小（编译期常量），且 ureq 自身已经间接依赖 libc
# extra_traits feature 提供 SOL_SOCKET / SO_REUSEADDR 等常量
libc = { version = "0.2", features = ["extra_traits"] }
# v0.22: flate2 用于录制文件压缩存储
flate2 = "1.1"
