[package]
name = "mora"
version = "0.0.34"
# v0.x 升级 ureq 3.3.0 → edition 2024 (ureq 3.3.0 要求 edition 2024 + MSRV 1.85)
edition = "2024"
authors = ["Mora contributors"]
description = "An AI-native scripting language with streaming, tool calling, memory, routing, agent orchestration, and token budgeting"
license = "BSD-3-Clause"
keywords = ["scripting", "ai", "workflow", "lua-style", "ai-native"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "mora"
path = "src/lib.rs"

[[bin]]
name = "mora"
path = "src/main.rs"

[[bin]]
name = "mora-lsp"
path = "src/bin/lsp.rs"

# v0.04: 删除 mora-mcp 和 mora-serve 二进制
# 单二进制 mora 根据脚本内 `serve as mcp/http` 块自动选择协议

[dependencies]
# v0.34: 引入 tokio + reqwest，把运行时从同步线程池升级到异步 actor/通道模型。
# ureq 将逐步迁移到 reqwest，过渡期保留。
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# v10 首次外部依赖：ureq 同步 HTTP 客户端
# v0.34 起逐步迁移到 reqwest；保留 ureq 直到全部外部调用完成异步化。
ureq = "3.3"
# v0.11: libc 用于设置 SO_REUSEADDR（避免 TIME_WAIT 端口占用）
# 选择 libc 而非 socket2 的理由：libc 是 Rust 几乎必备的 stdlib-like 包，
# 体积小（编译期常量），且 ureq 自身已经间接依赖 libc
# extra_traits feature 提供 SOL_SOCKET / SO_REUSEADDR 等常量
libc = { version = "0.2", features = ["extra_traits"] }
# v0.22: flate2 用于录制文件压缩存储
flate2 = "1.1"
# v0.28: Office (PPTX/DOCX) + Image OCR backends (all pure Rust)
undoc = { version = "0.5", default-features = false, features = ["docx", "pptx"] }
ocrs = "0.12"
# v0.28 Task 6: ocrs does not re-export `rten`, but `OcrEngine::new` requires
# pre-loaded `rten::Model` instances for the detection + recognition models.
# We pull rten directly so we can call `rten::Model::load_static_slice` on
# the `.rten` model files we vendor in `tests/fixtures/`. Pinned to match
# the version of rten that ocrs 0.12.2 already pulls in transitively.
rten = "0.24"
# v0.28 Task 6: ocrs's public API returns `anyhow::Result<T>` everywhere,
# but ocrs does not re-export `anyhow` itself — so we depend on it directly
# to spell out the `OnceLock<anyhow::Result<OcrEngine>>` type and to
# construct an `anyhow::Result` in `get_or_init`.
anyhow = "1"
image = { version = "0.24", default-features = false, features = ["png"] }
# v0.27: Document 统一 IR
# PDF 后端
lopdf = "0.42"
pdf-extract = "0.12"
# Markdown 后端
pulldown-cmark = "0.13"
# HTML 后端
quick-xml = "0.40"
